feat(cache): add redis caching and widgets api
Introduce Redis-based caching for workspace, chart widget and exchange
pair data. Add RedisConfig, spring cache and redis dependencies, and
redis service in compose. Apply @Cacheable/@CacheEvict annotations with
user/workspace scoped keys and update service logic to evict on writes.
Add getAllByWorkspaceId endpoint with OpenAPI docs and adjust controller
mappers. Replace deleteById usage with deleteByWorkspaceIdAndId for
scoped deletes and simplify workspace domain/mapping types.

BREAKING CHANGE: getWorkspaceById now returns Workspace instead of
WorkspaceDetail and related OpenAPI schema changed; clients must adapt to
the new response shape.