@@ -5,10 +5,14 @@ import dev.rudyevhenii.crypto_aggregator.exchange_pair.mapper.ExchangePairEntity
 import dev.rudyevhenii.crypto_aggregator.exchange_pair.repository.ExchangePairRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static dev.rudyevhenii.crypto_aggregator.core.config.RedisConfig.EXCHANGE_PAIR_CACHE;
 
 @Slf4j
 @Service
@@ -19,12 +23,13 @@ public class ExchangePairServiceImpl implements ExchangePairService {
     private final ExchangePairEntityMapper mapper;
 
     @Override
+    @Cacheable(value = EXCHANGE_PAIR_CACHE)
     @Transactional(readOnly = true)
     public List<ExchangePair> findAllTradingPairs() {
         log.info("Finding all trading pairs");
         return repository.findAllByOrderByTradingPairAscExchange().stream()
                 .map(mapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -33,6 +38,6 @@ public class ExchangePairServiceImpl implements ExchangePairService {
         log.info("Searching for pattern '{}'", pattern);
         return repository.searchByPattern(pattern).stream()
                 .map(mapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
